--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <groupId>io.netty</groupId>
   <artifactId>netty</artifactId>
   <packaging>bundle</packaging>
-  <version>3.9.9.Final-SNAPSHOT</version>
+  <version>3.9.9.Final</version>
 
   <name>Netty</name>
   <url>http://netty.io/</url>
