--- a/common/pom.xml
+++ b/common/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.1.0.Beta6-SNAPSHOT</version>
+    <version>4.1.0.Beta6</version>
   </parent>
 
   <artifactId>netty-common</artifactId>
