--- a/codec-socks/pom.xml
+++ b/codec-socks/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.1.0.Beta6</version>
+    <version>4.1.0.Beta7-SNAPSHOT</version>
   </parent>
 
   <artifactId>netty-codec-socks</artifactId>
