--- a/handler/pom.xml
+++ b/handler/pom.xml
@@ -47,7 +47,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>netty-tcnative</artifactId>
-      <classifier>${os.detected.classifier}</classifier>
+      <classifier>${tcnative.classifier}</classifier>
       <optional>true</optional>
     </dependency>
     <dependency>
