--- a/example/pom.xml
+++ b/example/pom.xml
@@ -81,7 +81,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>netty-tcnative</artifactId>
-        <classifier>${os.detected.classifier}</classifier>
+        <classifier>${tcnative.classifier}</classifier>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty.npn</groupId>
