--- a/microbench/pom.xml
+++ b/microbench/pom.xml
@@ -68,7 +68,7 @@
       <groupId>${project.groupId}</groupId>
       <artifactId>netty-transport-native-epoll</artifactId>
       <version>${project.version}</version>
-      <classifier>linux-${epoll.arch}</classifier>
+      <classifier>${epoll.classifier}</classifier>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
