--- a/transport-native-epoll/pom.xml
+++ b/transport-native-epoll/pom.xml
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>netty-tcnative</artifactId>
-      <classifier>${os.detected.classifier}</classifier>
+      <classifier>${tcnative.classifier}</classifier>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -105,7 +105,7 @@
               <goal>jar</goal>
             </goals>
             <configuration>
-              <classifier>${os.detected.classifier}</classifier>
+              <classifier>${epoll.classifier}</classifier>
             </configuration>
           </execution>
         </executions>
