--- a/all/pom.xml
+++ b/all/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.0.32.Final</version>
+    <version>4.0.33.Final-SNAPSHOT</version>
   </parent>
 
   <artifactId>netty-all</artifactId>
