--- a/codec-http2/pom.xml
+++ b/codec-http2/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.1.0.Beta7</version>
+    <version>4.1.0.Beta8-SNAPSHOT</version>
   </parent>
 
   <artifactId>netty-codec-http2</artifactId>
