--- a/example/pom.xml
+++ b/example/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.1.0.Beta7</version>
+    <version>4.1.0.Beta8-SNAPSHOT</version>
   </parent>
 
   <artifactId>netty-example</artifactId>
