--- a/transport-native-epoll/pom.xml
+++ b/transport-native-epoll/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.1.0.Beta8-SNAPSHOT</version>
+    <version>4.1.0.Beta8</version>
   </parent>
   <artifactId>netty-transport-native-epoll</artifactId>
 
